# x_invest

./: .dockerignore  .env.example  .gitignore  FUTURE_WORK.md  README.md  TECHNICAL_REPORT.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  run.ps1
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260227_0001_init_schema.py  20260301_0002_thread_dedupe_versioning.py  20260301_0003_folders.py  20260302_0004_user_model_settings.py  20260302_0005_reasoning_effort.py  20260302_0006_api_token_expiry.py  20260302_0007_chat_threads.py  20260606_0008_thread_capture_snapshots.py  20260610_0009_x_api_integration.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: __init__.py  deps.py
apps/api/app/cli/: __init__.py  revalidate_x.py
apps/api/app/core/: __init__.py  clerk_jwt.py  config.py  cors.py  observability.py  rate_limit.py  security.py
apps/api/app/db/: __init__.py  models.py  session.py
apps/api/app/schemas/: __init__.py  chat.py  folders.py  ingest.py  model_settings.py  tokens.py  x_integration.py
apps/api/app/services/: __init__.py  embeddings.py  ingest.py  model_settings.py  openai_client.py  prompts.py  rag.py  x_api.py  x_crypto.py  x_ingestion.py
apps/api/tests/: conftest.py  test_articles.py  test_auth_observability.py  test_chat_threads.py  test_cors_config.py  test_folders.py  test_ingest_thread_versioning.py  test_ingest_tweet_recapture.py  test_model_settings.py  test_rate_limit.py  test_retrieval_rerank.py  test_security.py  test_x_api_integration.py
docs/: PRODUCT_BREIF.md  (+6 more)
(+84 files in other folders)
