[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "cryptography>=44.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "pgvector>=0.3.2",
  "psycopg[binary]>=3.2.0",
  "pyjwt[crypto]>=2.9.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "pytest>=8.3.0",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.31.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
